--- a/PROJECT 1..JAVASCRIPT/index.html
+++ b/PROJECT 1..JAVASCRIPT/index.html
@@ -36,6 +36,10 @@
         <h3>Welcome To Keep Notes</h3>
         <div class="card">
             <div class="card-body">
+                <div class="mb-3">
+                    <h5 class="card-title">Title</h5>
+                    <input type="text" class="form-control" id="addTitle" placeholder="Add title">
+                  </div>
                 <h5 class="card-title">Add a Note</h5>
                 <div class="mb-3">
                     <textarea class="form-control" id="addTxt" rows="3"></textarea>
